listifyFrontend/style.css
@font-face {
  font-family: 'Agane';
  src: url('assets/agane_45_light-webfont.woff');
}
*{
  margin:0;
  padding:0;
  box-sizing: border-box;
  font-family:'Agane';
}
:root {
  line-height: 24px;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}
/*start of calendar styling*/
body{
	display:flex;
  -webkit-font-smoothing: antialiased;
  font-smooth: always;
  -moz-osx-font-smoothing: grayscale;

}
.cal__container::-webkit-scrollbar {
	 display: none;
}
.cal__container::-moz-scrollbar {
	display: none;
  }
  
  .cal__container::-ms-scrollbar {
	display: none;
  }
 .calendar {
     height: 100%;
	 border-spacing: 1px;
     padding-left:5px;
     padding-right:5px;

}
 .cal__container {
	 height: calc(100% - 47px);
	 overflow: hidden;
	 overflow-y: scroll;
     border-top:1px solid #44464C;
}
 .cal__controls {
	 font-size: 22px;
	 justify-content: space-between;
	 margin-bottom: 10px;
	 display: flex;
	 margin-bottom: 2rem 0px;
}
 .selected {
	 background-color: #f99092 !important;
	 color: #fff;
}
 .selected__startEnd {
	 background-color: #ff5a5f !important;
	 color: #fff !important;
}
 .month {
	 margin-top: 5px;
}
.month__controls > div{
	display:flex;
	justify-content:space-between;
}
 .month span {
	 font-size: 14px;
}
.month__controls span:first-of-type{
	color:#DCDDDE;
}
 table {
	 border-collapse: collapse;
	 margin-top: 5px;
	 width: calc(100% - 1px);
}
 tr:first-of-type td {
	 text-transform: uppercase;
}
 th {
	 font-size: 12px;
	 width: 30px;
	 height: 26px;
	 border: 1px solid #111 !important;
	 border: none !important;
	 text-transform: uppercase;
	 font-weight: bold;
}
 td {
	 height: 26px;
	 border: 1px solid #ededed;
	 font-size: 12px;
	 text-align: center;
	 border: 1px solid #ededed;
	 position: relative;
}
 td[data-date]:hover {
	 background-color: #41444A;
	 cursor: pointer;
}
 select {
	 height: 35px;
	 width: 100%;
	 font-size: 18px;
	 text-align: center;
}
 .inputs {
	 width: 100%;
	 border-top-left-radius: 4px;
	 border-bottom-left-radius: 4px;
	 border-top-right-radius: 4px;
	 border-bottom-right-radius: 4px;
	 margin-bottom: 10px;
     display:flex;
     justify-content:space-around;
}
 .inputs div {
    font-size: 14px;
	 height: 30.4px;
	 padding-left: 10px;
     padding-right:10px;
	 text-align: center;
     margin-top: 5px;
     display: flex;
     align-items: center;
     padding-left: 5px;
     padding-right: 5px;
     border: 1px solid #97989D;
     border-radius: 3px;

}
.inputs div:hover {
    background-color: #41444A;
    cursor: pointer;
}
 .more__months {
	 display: block;
	 text-align: center;
	 padding: 10px 15px;
	 border: 1px solid #97989D;
	 margin-top: 5px;
	 cursor: pointer;
	 border-radius: 5px;
	 color: #97989D;
	 transition: all 0.2s ease;
	 margin-bottom: 15px;
}
 .more__months:hover {
	 background-color: #41444A;
}
 .circles {
	 border-collapse: unset;
}
 .circles td {
	 border: none !important;
	 border-radius: 50%; /*making this 0% solves it but isn't elegant*/
}
 .calendarHolder {
    background-color: #2D2E33;
    color:#97989D;
	 height: 320px;
	 width: 212px; /*reduced by 25%; need corresponding reduction in height of cells*/
	 margin: auto;
	 border: 1px solid #5d5d5d;
	 position: absolute;
   left:calc(50% - 212px / 2);
   top:100%;
}
.todaysDate{
    position:relative;
}
.todayIndicator{
    height:4px;
    width:4px;
    border-radius: 50%;
    background-color: #7400B8;
    position:absolute;
    left:calc(50% - 2px);
    bottom: 2px;

}
/*end of calendar styling*/

/*beginning of form styling*/
body{
  width:100%;
  align-items: center;
  flex-direction: column;
  background-color: #37393e;
}
.allTasks{
  width:clamp(450px, 50%, 700px);
  display:flex;
  flex-direction: column;
  border-bottom:#44464C 3px solid;
}
.addForm{
  /*width:min(50%, 700px);*/
  width:100%;
  display:flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  background-color: #303136;
  border-radius: 10px;
  color:#97989D;
  line-height: 18px;
  font-size:13px;
  position:relative;
}
.textInput{
  background-color: #303136;
  color:#FFFFFF;
  white-space: normal;
  resize:none;
  word-wrap:break-word;
  cursor:text;
  display:inline-block;
}
.textInput:focus{
  outline:none;
  white-space: normal;
}
.title{
  width:calc(100% - 20px);
  margin-top:10px;
  margin-left:10px;
  font-size: 15px;
  line-height: 14px;
  padding-bottom:4px;
}
.textInput:empty:before {
  content: attr(placeholder);
  color: #97989D; 
}
.description{
  margin-left:10px;
  width:calc(100% - 20px);
  line-height:14px;
  min-height: 3em;
}
.bottomButtons{
  width:calc(100% - 20px);
  display:flex;
  justify-content: space-between;
  margin-bottom:10px;
  margin-right:10px;
  margin-left:10px;
  margin-top: 4px;
  z-index:5;
}
button{
  background-color: #303136;
  color:#97989D;
}
.selectable:hover:not(.dimmed){
  background-color: #41444A;
  cursor: pointer;
}
.options{
  display:flex;
  flex-direction: row;  
}
.estTime{
  display:flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #44464C;
  border-radius: 5px;
  position:relative;
}
.clockLogo{
  width:14px;
  height:14px;
  margin:3px;
}
.estTimeChoice{
  margin-right:3px;
}
.dueDate{
  display:flex;
  justify-content:space-between;
  align-items:center;
  border: 1px solid #44464C;
  border-radius: 5px;
  margin-left:5px;
  position:relative;
}
.calLogo{
  width:14px;
  height:14px;
}
.calLogoForm{
  margin:3px;
}
.dueDateChoice{
  margin-right:3px;
}
.priorityBox{
  display:flex;
  justify-content: space-between;

}
.priority{
  display:flex;
  justify-content: space-between;
  align-items:center;
  border: 1px solid #44464C;
  border-radius: 5px;
  margin-left:5px;
  position:relative;
}
.priLogo{
  width:14px;
  height:14px;
  margin:3px;
}
.priChoice{
  margin-right:3px;
}
.maxPriority{
  display:flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #44464C;
  border-radius: 5px;
  margin-left:5px;
  position:relative;
}
.maxPriChoice{
  margin-right:3px;
}
.rightSideButtons{
  display:flex;
  justify-content: space-between;
  background-color: #303136;
}
.cancel{
  border: 1px solid #44464C;
  border-radius: 5px;
  margin-left:5px;
  display:flex;
  align-items: center;

}
.addTask{
  border: 1px solid #44464C;/*make border colors delineation line*/
  border-radius: 5px;
  margin-left:5px;
  display:flex;
  align-items: center;
}
.rightSideButtons span{
  padding-left:3px;
  padding-right:3px;
}
.errorMessage{
  border-radius: 5px;
  background-color: #640303;
  padding:3px;
  position:absolute;
  transition: top .35s;
  transition-timing-function: ease-out;
  z-index:-1;
}
.dimmed{
  color:#4c4c4e;
  cursor:not-allowed;
}
  /*top:100%;
  left:calc(50%);*/

/*end of form styling*/
/*beginning of time picker styling*/
.timePickerHolder{
  position:absolute;
  top:100%;
  left:calc(50% - (144.48px / 2));
  display:flex;
  background-color: #2D2E33;
  border: 1px solid #5d5d5d;
}
.timePickerHolder:hover{
  cursor:default;
}
.timePickerHolder>div{
  padding:2.5px;
}
.timePickerHolder input{
  border: 1px solid #44464C;
}
/*end of time picker styling*/
/*beginning of priority picker styling*/
.priorityPickerHolder{
  display:flex;
  flex-direction: column;
  position:absolute;
  top:100%;
  left:calc(50% - 56.72px / 2);
  background-color: #2D2E33;
  border: 1px solid #5d5d5d;
  min-width: 56.4px;
}
.priorityPicker{
  padding:2.5px;
}
/*end of priority picker styling*/
/*beginning of task styling*/
.task{
  /*width:min(50%, 700px);*/
  width:100%;
  border-top:#44464C 3px solid;
  display:flex;
  font-size:13px;
  color:#FFFFFF;
  line-height: 14px;
  position:relative;
  cursor:pointer;
}
.checkCircle{
  width:20px;
  height:20px;
  border-radius: 50%;
  border:#18191C 1px solid;
  margin-top: 7px;
  margin-right: 10px;
  background-color: #303136;
  position:relative;
}
.checkCircle:hover .xLogo{
  filter: invert(63%) sepia(83%) saturate(360%) hue-rotate(155deg) brightness(92%) contrast(94%);
}
.checkCircle:hover{
  cursor:pointer;
}
.xLogo{
  width: 8px;
  height: 18px;
  position: relative;
  left: calc(50% - 4px);
  transition:.25s;
  filter: invert(13%) sepia(5%) saturate(1067%) hue-rotate(192deg) brightness(100%) contrast(83%);
}
.infoContainer{
  width:100%;
  z-index:-2;
}
.taskTitle{
  display:inline-block;
  font-size:15px;
}
.taskDescription{
  display:inline-block;
  color:#97989D;
}
.taskPri{
  display:flex;
  align-items: center;
}
.priBar{
  display:inline-flex;
}
.priCube{
  display:inline-block;
  /*border: #18191C 1px solid;*/
  box-shadow: 
  1px 0 0 0 #18191C, 
  0 1px 0 0 #18191C, 
  1px 1px 0 0 #18191C,   /* Just to fix the corner */
  1px 0 0 0 #18191C inset, 
  0 1px 0 0 #18191C inset;
  width:10px;
  height:16px;
}
.taskPri > span{
  margin-left:4px;
  /*margin-right:-3px;*/
}
.filled{
  background-color: #303136;
}
.taskDueDate{
  display:flex;
  align-items: center;
  color:#48BFE3;
}
.calLogoTask{
  margin-right:3px;
  margin-top:3px;
  margin-bottom:3px;
}
.clockLogoTask{
  margin-left:6px;
}
.priLogoTask{
  margin-left:6px;
}
.taskEstTime{
  display:flex;
  align-items: center;
  margin-left:auto;
}
.row{
  display:flex;
  justify-content: space-between;
}
.topRow{
  margin-top:10px;
  padding-bottom: 2px;
}
.middleRow{
  display:flex;
  align-items:center;
}
.bottomRow{
  padding-bottom:8px;
}
/*end of task styling*/
/*beginning of add button styling*/
.addButton{
  display:flex;
  align-items: center;
  color:#97989D;
  font-size:15px;
  margin-top:50px;
  padding-bottom:10px;
  padding-top:10px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
}
.addLogo{
  width:20px;
  height:20px;
  margin-right:10px;
}
.addButton:hover{
  color:#48BFE3;
  cursor: pointer;
}
/*end of add button styling*/

/*beginning of login screen styling*/
.loginWrapper{
  height:100vh;
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.loginBox{
  width:400px;
  height:300px;
  background-color: #212225;
  border-radius: 10px;
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#g_id_onload{
  display:none;
}
.g_id_signin{
  display:flex;
  justify-content: center;
}
.guestLogin{
  width:184px;
  border-radius: 4px;
  margin-top:30px;
  color: #DCDDDE;
  text-align:center;
  border: 1px solid #44464C;
}
.guestLogin:hover{
  background-color:#41444A;
  cursor:pointer;
}
/*end of login screen styling*/
/*start of edit form styling*/
 
.overlay{
  background-color: #37393e;
  display:flex;
  align-items: center;
  flex-direction: column;
  position:fixed;
  width:100vw;
  height:100vh;
}
.dimScreen{
  -webkit-filter: blur(4px) brightness(50%);
  -moz-filter: blur(4px) brightness(50%);
  -o-filter: blur(4px) brightness(50%);
  -ms-filter: blur(4px) brightness(50%);
  filter: blur(4px) brightness(50%);
  filter: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="blur"><feGaussianBlur stdDeviation="4"/></filter></svg>#blur') brightness(50%);
  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='4') progid:DXImageTransform.Microsoft.Brightness(50%);
}
.editForm{
  width:clamp(450px, 50%, 700px);
  display:flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  background-color: #303136;
  border-radius: 10px;
  color:#97989D;
  line-height: 18px;
  font-size:13px;
  position:absolute;
  top:40%;

  /* -webkit-filter: none;
  -moz-filter: none;
  -o-filter: none;
  -ms-filter: none;
  filter: none; */
}
/*end of edit form styling*/
/*beginning of highlight nlp styling*/
.highlighted{
  background-color:#48BFE3;
  border-radius:3px;
  padding:2px;
  cursor:pointer;
}
.nonhighlighted{
  background-color: transparent !important;
}
/*end of highlight nlp styling*/

.hidden{
  display:none;
}

